--- a/src/problematic_internet_use_llm.ipynb
+++ b/src/problematic_internet_use_llm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "b738c2ef",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "de19fc13",
    "metadata": {},
    "outputs": [],
@@ -34,10 +34,6 @@
     "BASE_DIR = Path().resolve()\n",
     "DATA_DIR = BASE_DIR / \"data\"\n",
     "OUTPUT_DIR = BASE_DIR / \"outputs\"\n",
-    "\n",
-    "# 2. Agregar src al path para poder importar módulos locales\n",
-    "if str(SRC_DIR) not in sys.path:\n",
-    "    sys.path.append(str(SRC_DIR))\n",
     "\n",
     "# 3. Verificar lectura de los archivos\n",
     "train_path = DATA_DIR / 'train.csv'\n",
@@ -54,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "5594db62",
    "metadata": {},
    "outputs": [],
@@ -104,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "57b5ad16",
    "metadata": {},
    "outputs": [],
@@ -116,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "4acffd07",
    "metadata": {},
    "outputs": [],
@@ -129,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "efc004d5",
    "metadata": {},
    "outputs": [],
@@ -147,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "76e22533",
    "metadata": {},
    "outputs": [
@@ -178,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "ee2d5864",
    "metadata": {},
    "outputs": [
@@ -190,26 +186,27 @@
       "# Importa el cargador de notebooks de LangChain\n",
       "from langchain_community.document_loaders import NotebookLoader\n",
       "\n",
-      "# Configuración del cargador:\n",
-      "# - Archivo: prueba-llm.ipynb\n",
-      "# - exclude_outputs: No incluir salidas de celdas\n",
-      "# - remove_newline: Eliminar saltos de línea\n",
+      "# Configura y ejecuta el cargador de notebooks\n",
+      "# - include_outputs=False: No incluye salidas de celdas\n",
+      "# - remove_newline=True: Elimina saltos de línea en el contenido\n",
       "loader = NotebookLoader(\n",
-      "    file_path=\"prueba-llm.ipynb\",\n",
-      "    include_outputs=False,\n",
+      "    \"prueba-llm.ipynb\", \n",
+      "    include_outputs=False, \n",
       "    remove_newline=True\n",
       ")\n",
       "\n",
-      "# Carga los documentos y muestra el conteo de celdas\n",
+      "# Carga los documentos (celdas del notebook)\n",
       "docs = loader.load()\n",
-      "print(f\"Celdas encontradas: {len(docs)}\")\n",
       "\n",
-      "# Mejoras realizadas:\n",
-      "# 1. Formateo consistente del código\n",
-      "# 2. Argumentos nombrados explícitamente\n",
-      "# 3. Comentarios descriptivos\n",
-      "# 4. Mantenimiento de la funcionalidad original\n",
-      "```\n"
+      "# Muestra el número de celdas encontradas\n",
+      "print(f\"Celdas encontradas: {len(docs)}\")\n",
+      "```\n",
+      "\n",
+      "# Cambios realizados:\n",
+      "# 1. Agregué comentarios descriptivos para cada sección del código\n",
+      "# 2. Organizé los parámetros del NotebookLoader en líneas separadas para mejor legibilidad\n",
+      "# 3. Mantuve exactamente la misma funcionalidad original\n",
+      "# 4. Eliminé el comentario sobre Kaggle ya que no es relevante para la funcionalidad del código\n"
      ]
     }
    ],
@@ -232,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "id": "b8a36b8b",
    "metadata": {},
    "outputs": [],
@@ -256,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "id": "2612cb40",
    "metadata": {},
    "outputs": [
@@ -264,70 +261,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Basándome en el diccionario de datos proporcionado, aquí tienes recomendaciones de feature engineering organizadas por categorías:\n",
+      "# Análisis y Recomendaciones de Feature Engineering para el Diccionario de Datos\n",
       "\n",
-      "### 1. **Variables Categóricas (One-Hot Encoding/Label Encoding)**\n",
-      "   - **Estacionalidad**: Las variables `*_Season` (presentes en casi todos los instrumentos) podrían convertirse en variables dummy (one-hot encoding) para capturar efectos estacionales.\n",
-      "   - **Variables con etiquetas**: \n",
-      "     - `Sex` (0/1), `*_Zone` (ej. `FGC_CU_Zone`), `BIA_Activity_Level_num`, `BIA_Frame_num`, `PCIAT_*` (ítems 1-20), y `computerinternet_hoursday` son categóricas ordinales o nominales. Usa:\n",
-      "       - **One-hot encoding** si no hay orden (ej. estaciones).\n",
-      "       - **Label encoding** si hay orden (ej. `BIA_Activity_Level_num`: 1=Very Light a 5=Exceptional).\n",
-      "     - Para `PCIAT_Total`, considera crear categorías basadas en los umbrales de severidad proporcionados (None/Mild/Moderate/Severe).\n",
+      "Basado en el archivo `data_dictionary.csv` proporcionado, aquí tienes mis recomendaciones para el feature engineering:\n",
       "\n",
-      "### 2. **Normalización/Estandarización**\n",
-      "   - **Variables continuas**: `Age`, `BMI`, `Height`, `Weight`, medidas de BIA (ej. `BIA_BMC`, `BIA_BMR`), y puntuaciones totales (`PAQ_A_Total`, `PAQ_C_Total`, `SDS_Total_Raw`). \n",
-      "     - Usa **StandardScaler** si la distribución es normal.\n",
-      "     - Usa **MinMaxScaler** si los valores tienen rangos fijos (ej. porcentajes).\n",
+      "## 1. **Variables Categóricas**\n",
       "\n",
-      "### 3. **Creación de Nuevas Features**\n",
-      "   - **Antropometría**:\n",
-      "     - `BMI` ya está incluido, pero podrías crear `BMI_ZScore` (para niños/adolescentes, usando tablas de referencia por edad/sexo).\n",
-      "     - Ratio `Waist-to-Height` (Waist_Circumference/Height) como indicador de salud metabólica.\n",
-      "   - **Fitness**:\n",
-      "     - Combina `Time_Mins` y `Time_Sec` en una sola variable: `Total_Time_Seconds`.\n",
-      "     - Crea un *composite score* de fitness (ej. promedio de zonas saludables: `FGC_*_Zone`).\n",
-      "   - **PCIAT**:\n",
-      "     - Suma de ítems específicos para subescalas (ej. \"adicción\", \"impacto social\").\n",
-      "   - **Sueño**:\n",
-      "     - Clasifica `SDS_Total_T` en categorías basadas en puntuaciones clínicas (si existen).\n",
+      "### Variables existentes con categorías definidas:\n",
+      "- **Basic_Demos-Sex**: Ya está bien definida (0=Male, 1=Female)\n",
+      "- **Varias variables de zonas de fitness**: Todas tienen categorías claras (Needs Improvement/Healthy Fitness Zone, Weak/Normal/Strong)\n",
+      "- **BIA_Activity_Level_num**: Con niveles bien definidos (Very Light to Exceptional)\n",
+      "- **BIA_Frame_num**: (Small, Medium, Large)\n",
+      "- **Variables PCIAT (1-20)**: Todas con la misma escala ordinal (0-5)\n",
+      "- **computerinternet_hoursday**: Categorías claras de horas de uso\n",
       "\n",
-      "### 4. **Manejo de Valores Faltantes**\n",
-      "   - **Instrumentos con muchas features**: BIA y PCIAT tienen múltiples columnas. Considera:\n",
-      "     - **Imputación** por mediana/moda si los faltantes son <10%.\n",
-      "     - **Indicadores de faltante** (ej. `BIA_missing_flag`) si son significativos.\n",
+      "### Recomendaciones:\n",
+      "- **One-Hot Encoding**: Para variables nominales como `Basic_Demos-Enroll_Season` y otras variables \"Season\" que tienen categorías sin orden inherente (Spring, Summer, Fall, Winter).\n",
+      "- **Ordinal Encoding**: Para variables como `BIA_Activity_Level_num` y `computerinternet_hoursday` que tienen un orden natural.\n",
+      "- **Mapeo de valores existentes**: Las variables categóricas ya codificadas como integers (ej. Sex) pueden mantenerse como están.\n",
       "\n",
-      "### 5. **Reducción de Dimensionalidad**\n",
-      "   - **PCA/Análisis factorial**: Para cuestionarios con muchos ítems (ej. PCIAT con 20 ítems) o medidas de BIA (12+ variables correlacionadas).\n",
-      "   - **Agregación**: Promedio de medidas repetidas (ej. `Sit & Reach` izquierdo/derecho).\n",
+      "## 2. **Variables Numéricas Continuas**\n",
       "\n",
-      "### 6. **Interacciones y No Linealidades**\n",
-      "   - **Interacciones**: `Sex × Fitness_Score`, `Age × BMI`.\n",
-      "   - **Binning**: Edad en grupos (niño/adolescente) o BMI en categorías (bajo peso, normal, sobrepeso).\n",
+      "### Variables existentes:\n",
+      "- Edad, BMI, medidas físicas (altura, peso, etc.), puntuaciones de tests, etc.\n",
       "\n",
-      "### 7. **Temporalidad (si aplica)**\n",
-      "   - Si hay múltiples registros por participante, crear features como:\n",
-      "     - **Diferencias** entre temporadas (ej. cambio en `BMI` entre Spring y Fall).\n",
-      "     - **Estabilidad** (ej. número de veces en \"Healthy Fitness Zone\").\n",
+      "### Recomendaciones:\n",
+      "- **Normalización/Estandarización**: Para algoritmos sensibles a la escala (SVM, redes neuronales, k-NN), aplicar:\n",
+      "  - StandardScaler para distribuciones normales\n",
+      "  - MinMaxScaler para distribuciones no normales\n",
+      "- **Transformaciones**: Para variables como BMI que podrían beneficiarse de transformaciones logarítmicas si la distribución es sesgada.\n",
+      "- **Binning**: Para variables como edad, podrías crear categorías de edad si tiene sentido clínicamente.\n",
       "\n",
-      "### Ejemplo de Código (Python):\n",
-      "```python\n",
-      "import pandas as pd\n",
-      "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+      "## 3. **Feature Engineering Creativo**\n",
       "\n",
-      "# Ejemplo para estacionalidad:\n",
-      "df['Season_Spring'] = df['Basic_Demos-Enroll_Season'].apply(lambda x: 1 if x == 'Spring' else 0)\n",
-      "# Ejemplo para PCIAT categories:\n",
-      "df['PCIAT_Severity'] = pd.cut(df['PCIAT-PCIAT_Total'], bins=[0, 30, 49, 79, 100], labels=['None', 'Mild', 'Moderate', 'Severe'])\n",
-      "# Escalado:\n",
-      "scaler = StandardScaler()\n",
-      "df[['Age', 'BMI']] = scaler.fit_transform(df[['Age', 'BMI']])\n",
-      "```\n",
+      "### Para variables de temporada:\n",
+      "- Crear variables cíclicas (sin/cos) para capturar la naturaleza circular de las estaciones.\n",
       "\n",
-      "### Consideraciones Finales:\n",
-      "- **Contexto clínico**: Valida las transformaciones con expertos (ej. categorías de BMI para niños).\n",
-      "- **Evaluación**: Prueba el impacto de cada feature en el modelo (usando técnicas como SHAP).\n",
+      "### Para medidas físicas:\n",
+      "- Crear ratios o índices compuestos como:\n",
+      "  - Relación cintura-altura\n",
+      "  - Diferencia entre fuerza dominante y no dominante\n",
+      "  - Proporciones corporales\n",
       "\n",
-      "¿Hay alguna área específica (ej. antropometría, cuestionarios) en la que quieras profundizar?\n"
+      "### Para variables de tiempo en FitnessGram:\n",
+      "- Combinar `Time_Mins` y `Time_Sec` en una sola variable en segundos.\n",
+      "\n",
+      "### Para PCIAT:\n",
+      "- Además del total, podrías crear:\n",
+      "  - Sub-escalas (ej. problemas conductuales, problemas académicos, etc.)\n",
+      "  - Variables binarias indicando si algún ítem alcanza un umbral crítico\n",
+      "  - Conteo de ítems con puntuación alta\n",
+      "\n",
+      "### Para Sleep Disturbance Scale:\n",
+      "- Considerar categorizar el T-Score según umbrales clínicos si existen.\n",
+      "\n",
+      "## 4. **Manejo de Valores Perdidos**\n",
+      "\n",
+      "- Implementar estrategias apropiadas según el tipo de variable:\n",
+      "  - Media/mediana para continuas\n",
+      "  - Moda para categóricas\n",
+      "  - Indicadores de missingness para patrones significativos\n",
+      "\n",
+      "## 5. **Interacciones entre Variables**\n",
+      "\n",
+      "- Considerar interacciones potencialmente significativas como:\n",
+      "  - Sexo × Actividad física\n",
+      "  - Edad × Medidas físicas\n",
+      "  - Uso de internet × Puntuación PCIAT\n",
+      "\n",
+      "## 6. **Reducción de Dimensionalidad**\n",
+      "\n",
+      "- PCA para variables altamente correlacionadas como:\n",
+      "  - Medidas corporales (altura, peso, BMI)\n",
+      "  - Variables de BIA (composición corporal)\n",
+      "  - Ítems de PCIAT\n",
+      "\n",
+      "## 7. **Variables Temporales**\n",
+      "\n",
+      "- Todas las evaluaciones tienen estación asociada, podrías:\n",
+      "  - Analizar efectos estacionales\n",
+      "  - Crear variables de cambio entre evaluaciones si hay múltiples mediciones por sujeto\n",
+      "\n",
+      "## 8. **Validación**\n",
+      "\n",
+      "- Asegurarte de que cualquier transformación/ingeniería:\n",
+      "  - Se calcule solo en el conjunto de entrenamiento\n",
+      "  - Se aplique consistentemente en validación y test\n",
+      "  - Documente claramente todas las transformaciones\n",
+      "\n",
+      "¿Te gustaría que profundice en alguna de estas recomendaciones en particular o que desarrolle código para implementar alguna de estas sugerencias?\n"
      ]
     }
    ],
@@ -345,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "cdc77a60",
    "metadata": {},
    "outputs": [],
@@ -461,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "f23643ef",
    "metadata": {},
    "outputs": [],
@@ -511,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "1f233bbf",
    "metadata": {},
    "outputs": [],
@@ -544,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "01c5d683",
    "metadata": {},
    "outputs": [],
@@ -593,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "58a2ef94",
    "metadata": {},
    "outputs": [],
@@ -623,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "727e2827",
    "metadata": {},
    "outputs": [
@@ -634,20 +656,7 @@
       "\n",
       "=== Cargando datos ===\n",
       "\n",
-      "=== Preprocesamiento ===\n",
-      "\n",
-      "=== Preparando target ===\n",
-      "\n",
-      "=== Seleccionando features ===\n",
-      "Features seleccionadas: 4272\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\leosa\\AppData\\Local\\Temp\\ipykernel_6368\\2534072281.py:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  train['SII_group'], bins = pd.qcut(\n"
+      "=== Preprocesamiento ===\n"
      ]
     },
     {
@@ -655,9 +664,28 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "=== Preparando target ===\n",
+      "\n",
+      "=== Seleccionando features ===\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\leosa\\AppData\\Local\\Temp\\ipykernel_7960\\518734959.py:17: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  train['SII_group'], bins = pd.qcut(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features seleccionadas: 4272\n",
+      "\n",
       "=== Entrenamiento ===\n",
       "\n",
-      "✔ QWK promedio: 0.4285\n",
+      "✔ QWK promedio: 0.4374\n",
       "\n",
       "=== Generando submission ===\n",
       "Submission saved to C:\\TrabajoFinal\\Child_mind_institute_problematic_internet_use\\src\\outputs\\submission.csv\n",
