Changed some API things to MarkDown because it used all the tokens XD

--- a/src/problematic_internet_use_llm.ipynb
+++ b/src/problematic_internet_use_llm.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b738c2ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\TrabajoFinal\\Child_mind_institute_problematic_internet_use\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -99,38 +108,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "id": "57b5ad16",
    "metadata": {},
-   "outputs": [],
    "source": [
     "load_dotenv()  # Carga las variables desde .env\n",
     "\n",
-    "api_key = os.getenv(\"DEEPSEEK_KEY\")"
+    "api_key = os.getenv(\"Chatbot_key\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "id": "4acffd07",
    "metadata": {},
-   "outputs": [],
    "source": [
     "client = OpenAI(\n",
-    "    api_key=os.getenv(\"DEEPSEEK_KEY\"),\n",
+    "    api_key=os.getenv(\"Chatbot_key\"),\n",
     "    base_url=\"https://openrouter.ai/api/v1\"\n",
     ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "id": "efc004d5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def query_deepseek(prompt: str, model: str = \"deepseek/deepseek-chat-v3-0324:free\") -> str:\n",
+    "\"\"\"\n",
+    "def query_deepseek(prompt: str, model: str = \"deepseek/deepseek-r1:free\") -> str:\n",
     "    resp = client.chat.completions.create(\n",
     "        model=model,\n",
     "        messages=[{\"role\":\"user\", \"content\":prompt}],\n",
@@ -138,30 +142,23 @@
     "        # Muestra la cantidad de output\n",
     "        max_tokens=4096,\n",
     "    )\n",
-    "    return resp.choices[0].message.content.strip()"
+    "    return resp.choices[0].message.content.strip()\n",
+    "\"\"\""
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "id": "76e22533",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Celdas encontradas: 1\n"
-     ]
-    }
-   ],
    "source": [
+    "\"\"\"\n",
     "# Cargar el notebook\n",
     "from langchain_community.document_loaders import NotebookLoader\n",
     "\n",
     "loader = NotebookLoader(\"problematic_internet_use_llm.ipynb\", include_outputs=False, remove_newline=True)\n",
     "docs = loader.load()\n",
-    "print(f\"Celdas encontradas: {len(docs)}\")"
+    "print(f\"Celdas encontradas: {len(docs)}\")\n",
+    "\"\"\""
    ]
   },
   {
@@ -173,43 +170,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "id": "ee2d5864",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "```python\n",
-      "# Importa el cargador de notebooks de LangChain\n",
-      "from langchain_community.document_loaders import NotebookLoader\n",
-      "\n",
-      "# Configura y ejecuta el cargador de notebooks\n",
-      "# - include_outputs=False: No incluye salidas de celdas\n",
-      "# - remove_newline=True: Elimina saltos de línea en el contenido\n",
-      "loader = NotebookLoader(\n",
-      "    \"prueba-llm.ipynb\", \n",
-      "    include_outputs=False, \n",
-      "    remove_newline=True\n",
-      ")\n",
-      "\n",
-      "# Carga los documentos (celdas del notebook)\n",
-      "docs = loader.load()\n",
-      "\n",
-      "# Muestra el número de celdas encontradas\n",
-      "print(f\"Celdas encontradas: {len(docs)}\")\n",
-      "```\n",
-      "\n",
-      "# Cambios realizados:\n",
-      "# 1. Agregué comentarios descriptivos para cada sección del código\n",
-      "# 2. Organizé los parámetros del NotebookLoader en líneas separadas para mejor legibilidad\n",
-      "# 3. Mantuve exactamente la misma funcionalidad original\n",
-      "# 4. Eliminé el comentario sobre Kaggle ya que no es relevante para la funcionalidad del código\n"
-     ]
-    }
-   ],
    "source": [
     "codigo_original = \"\"\"\n",
     "# Carga el notebook activo (puedes ver su nombre en Kaggle)\n",
@@ -228,11 +191,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "id": "b8a36b8b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def analizar_archivo(filepath: str, pregunta: str):\n",
     "    with open(filepath, \"r\", encoding=\"utf-8\") as f:\n",
@@ -252,107 +213,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "id": "2612cb40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Análisis y Recomendaciones de Feature Engineering para el Diccionario de Datos\n",
-      "\n",
-      "Basado en el archivo `data_dictionary.csv` proporcionado, aquí tienes mis recomendaciones para el feature engineering:\n",
-      "\n",
-      "## 1. **Variables Categóricas**\n",
-      "\n",
-      "### Variables existentes con categorías definidas:\n",
-      "- **Basic_Demos-Sex**: Ya está bien definida (0=Male, 1=Female)\n",
-      "- **Varias variables de zonas de fitness**: Todas tienen categorías claras (Needs Improvement/Healthy Fitness Zone, Weak/Normal/Strong)\n",
-      "- **BIA_Activity_Level_num**: Con niveles bien definidos (Very Light to Exceptional)\n",
-      "- **BIA_Frame_num**: (Small, Medium, Large)\n",
-      "- **Variables PCIAT (1-20)**: Todas con la misma escala ordinal (0-5)\n",
-      "- **computerinternet_hoursday**: Categorías claras de horas de uso\n",
-      "\n",
-      "### Recomendaciones:\n",
-      "- **One-Hot Encoding**: Para variables nominales como `Basic_Demos-Enroll_Season` y otras variables \"Season\" que tienen categorías sin orden inherente (Spring, Summer, Fall, Winter).\n",
-      "- **Ordinal Encoding**: Para variables como `BIA_Activity_Level_num` y `computerinternet_hoursday` que tienen un orden natural.\n",
-      "- **Mapeo de valores existentes**: Las variables categóricas ya codificadas como integers (ej. Sex) pueden mantenerse como están.\n",
-      "\n",
-      "## 2. **Variables Numéricas Continuas**\n",
-      "\n",
-      "### Variables existentes:\n",
-      "- Edad, BMI, medidas físicas (altura, peso, etc.), puntuaciones de tests, etc.\n",
-      "\n",
-      "### Recomendaciones:\n",
-      "- **Normalización/Estandarización**: Para algoritmos sensibles a la escala (SVM, redes neuronales, k-NN), aplicar:\n",
-      "  - StandardScaler para distribuciones normales\n",
-      "  - MinMaxScaler para distribuciones no normales\n",
-      "- **Transformaciones**: Para variables como BMI que podrían beneficiarse de transformaciones logarítmicas si la distribución es sesgada.\n",
-      "- **Binning**: Para variables como edad, podrías crear categorías de edad si tiene sentido clínicamente.\n",
-      "\n",
-      "## 3. **Feature Engineering Creativo**\n",
-      "\n",
-      "### Para variables de temporada:\n",
-      "- Crear variables cíclicas (sin/cos) para capturar la naturaleza circular de las estaciones.\n",
-      "\n",
-      "### Para medidas físicas:\n",
-      "- Crear ratios o índices compuestos como:\n",
-      "  - Relación cintura-altura\n",
-      "  - Diferencia entre fuerza dominante y no dominante\n",
-      "  - Proporciones corporales\n",
-      "\n",
-      "### Para variables de tiempo en FitnessGram:\n",
-      "- Combinar `Time_Mins` y `Time_Sec` en una sola variable en segundos.\n",
-      "\n",
-      "### Para PCIAT:\n",
-      "- Además del total, podrías crear:\n",
-      "  - Sub-escalas (ej. problemas conductuales, problemas académicos, etc.)\n",
-      "  - Variables binarias indicando si algún ítem alcanza un umbral crítico\n",
-      "  - Conteo de ítems con puntuación alta\n",
-      "\n",
-      "### Para Sleep Disturbance Scale:\n",
-      "- Considerar categorizar el T-Score según umbrales clínicos si existen.\n",
-      "\n",
-      "## 4. **Manejo de Valores Perdidos**\n",
-      "\n",
-      "- Implementar estrategias apropiadas según el tipo de variable:\n",
-      "  - Media/mediana para continuas\n",
-      "  - Moda para categóricas\n",
-      "  - Indicadores de missingness para patrones significativos\n",
-      "\n",
-      "## 5. **Interacciones entre Variables**\n",
-      "\n",
-      "- Considerar interacciones potencialmente significativas como:\n",
-      "  - Sexo × Actividad física\n",
-      "  - Edad × Medidas físicas\n",
-      "  - Uso de internet × Puntuación PCIAT\n",
-      "\n",
-      "## 6. **Reducción de Dimensionalidad**\n",
-      "\n",
-      "- PCA para variables altamente correlacionadas como:\n",
-      "  - Medidas corporales (altura, peso, BMI)\n",
-      "  - Variables de BIA (composición corporal)\n",
-      "  - Ítems de PCIAT\n",
-      "\n",
-      "## 7. **Variables Temporales**\n",
-      "\n",
-      "- Todas las evaluaciones tienen estación asociada, podrías:\n",
-      "  - Analizar efectos estacionales\n",
-      "  - Crear variables de cambio entre evaluaciones si hay múltiples mediciones por sujeto\n",
-      "\n",
-      "## 8. **Validación**\n",
-      "\n",
-      "- Asegurarte de que cualquier transformación/ingeniería:\n",
-      "  - Se calcule solo en el conjunto de entrenamiento\n",
-      "  - Se aplique consistentemente en validación y test\n",
-      "  - Documente claramente todas las transformaciones\n",
-      "\n",
-      "¿Te gustaría que profundice en alguna de estas recomendaciones en particular o que desarrolle código para implementar alguna de estas sugerencias?\n"
-     ]
-    }
-   ],
    "source": [
     "analizar_archivo(\"data\\data_dictionary.csv\", \"¿Puedes revisar este archivo y recomendarme su feature engineering?\")"
    ]
