Add some preprocessing

--- a/src/problematic_internet_use_llm.ipynb
+++ b/src/problematic_internet_use_llm.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "b738c2ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\TrabajoFinal\\Child_mind_institute_problematic_internet_use\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "de19fc13",
    "metadata": {},
    "outputs": [],
@@ -59,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "5594db62",
    "metadata": {},
    "outputs": [],
@@ -231,6 +222,45 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "416e7566",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _impute_numerical(self, train, test):\n",
+    "    \"\"\"Imputa valores faltantes en columnas numéricas comunes usando la mediana del train.\"\"\"\n",
+    "    num_cols = train.select_dtypes(include=np.number).columns\n",
+    "    common_num_cols = [col for col in num_cols if col in test.columns]\n",
+    "    \n",
+    "    for col in common_num_cols:\n",
+    "        median = train[col].median()\n",
+    "        train[col] = train[col].fillna(median)\n",
+    "        test[col] = test[col].fillna(median)\n",
+    "    \n",
+    "    return train, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "be307be8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _encode_sex(self, train, test):\n",
+    "    \"\"\"Crea variables dummy para sexo si la columna existe en ambos datasets.\"\"\"\n",
+    "    if 'Basic_Demos-Sex' in train.columns and 'Basic_Demos-Sex' in test.columns:\n",
+    "        train['Sex_Label'] = train['Basic_Demos-Sex'].map({0: 'Male', 1: 'Female'})\n",
+    "        test['Sex_Label'] = test['Basic_Demos-Sex'].map({0: 'Male', 1: 'Female'})\n",
+    "        \n",
+    "        train = pd.get_dummies(train, columns=['Sex_Label'], drop_first=True)\n",
+    "        test = pd.get_dummies(test, columns=['Sex_Label'], drop_first=True)\n",
+    "    \n",
+    "    return train, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "cdc77a60",
    "metadata": {},
    "outputs": [],
@@ -346,7 +376,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "id": "1a651c6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(self, train, test):\n",
+    "    try:\n",
+    "        # 0. Imputar numéricas\n",
+    "        train, test = self._impute_numerical(train, test)\n",
+    "        \n",
+    "        # 1. Identificar columnas seguras\n",
+    "        self._identify_safe_columns(train, test)\n",
+    "        \n",
+    "        # 2. Procesar texto\n",
+    "        if self.text_cols:\n",
+    "            train, test = self._process_text_optimized(train, test)\n",
+    "        \n",
+    "        # 3. Codificar categóricas\n",
+    "        if self.cat_cols:\n",
+    "            train, test = self._encode_categoricals(train, test)\n",
+    "        \n",
+    "        # 4. Codificar sexo\n",
+    "        train, test = self._encode_sex(train, test)\n",
+    "\n",
+    "        # 5. Normalizar numéricas\n",
+    "        train, test = self._scale_numerical(train, test)\n",
+    "        \n",
+    "        return train, test\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error en preprocesamiento: {str(e)}\")\n",
+    "        raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "f23643ef",
    "metadata": {},
    "outputs": [],
@@ -396,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "1f233bbf",
    "metadata": {},
    "outputs": [],
@@ -429,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "01c5d683",
    "metadata": {},
    "outputs": [],
@@ -478,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "58a2ef94",
    "metadata": {},
    "outputs": [],
@@ -508,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "727e2827",
    "metadata": {},
    "outputs": [
@@ -529,14 +595,15 @@
       "\n",
       "=== Preparando target ===\n",
       "\n",
-      "=== Seleccionando features ===\n"
+      "=== Seleccionando features ===\n",
+      "Features seleccionadas: 4272\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\leosa\\AppData\\Local\\Temp\\ipykernel_7960\\518734959.py:17: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\leosa\\AppData\\Local\\Temp\\ipykernel_2152\\518734959.py:17: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  train['SII_group'], bins = pd.qcut(\n"
      ]
     },
@@ -544,11 +611,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features seleccionadas: 4272\n",
       "\n",
       "=== Entrenamiento ===\n",
       "\n",
-      "✔ QWK promedio: 0.4374\n",
+      "✔ QWK promedio: 0.4361\n",
       "\n",
       "=== Generando submission ===\n",
       "Submission saved to C:\\TrabajoFinal\\Child_mind_institute_problematic_internet_use\\src\\outputs\\submission.csv\n",
